--- a/package.json
+++ b/package.json
@@ -7,17 +7,24 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "d3-dsv": "^2.0.0",
     "d3-format": "^2.0.0",
     "d3-scale": "^3.2.3",
     "d3-time": "^2.0.0",
     "d3-time-format": "^3.0.0",
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "mysql": "^2.18.1",
+    "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "react-stockcharts": "^0.7.8",
+    "recharts": "^2.0.8",
+    "rsuite": "^4.9.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
