--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3-scale": "^3.2.3",
     "d3-time": "^2.0.0",
     "d3-time-format": "^3.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "mysql": "^2.18.1",
